# Site-Safety-Monitor

./: .env.example  .gitignore  README.md  ai-repo-tmp-line_crossing.py  docker-compose.yml  requirements.txt  safety_monitor.py
ai-repo/: requirements.txt
ai-repo/ai-repo/: pyproject.toml
ai-repo/ai-repo/ai_repo/detection/: __init__.py  detector.py
ai-repo/ai-repo/ai_repo/pipelines/: safety_pipeline.py
ai-repo/ai-repo/ai_repo/tracking/: tracker.py
ai-repo/ai-repo/ai_repo/zones/: __init__.py  line_crossing.py
ai-repo/ai_repo/: __init__.py  config.py
ai-repo/ai_repo/detection/: detector.py
ai-repo/ai_repo/pipelines/: __init__.py  safety_pipeline.py
ai-repo/ai_repo/tracking/: cooldown.py  tracker.py
ai-repo/ai_repo/zones/: line_crossing.py
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_camera_detection_mode.py  0003_zone_line_endpoints.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  crypto.py  database.py  logging.py  rate_limit.py  request_context.py  security.py
backend/app/enums/: __init__.py
backend/app/exceptions/: __init__.py  base.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_cameras.py  test_crypto_login.py  test_detection_logic.py  test_detections.py  test_envelope.py  test_rate_limit.py  test_rbac.py  test_statistics.py  test_zones.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
input_videos/: README.txt
scripts/: docker-up.ps1
(+84 files in other folders)
